plugin with infeasible direcotry tree

--- a/install
+++ b/install
@@ -4,8 +4,9 @@
 
 # the service
 mkdir build
-cmake ..
 cd build
+cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` -DCMAKE_BUILD_TYPE=Release -DLIB_INSTALL_DIR=lib -DKDE_INSTALL_USE_QT_SYS_PATHS=ON ..
+# cmake ..
 make install
 
 # the plasmoid package
