--- a/install
+++ b/install
@@ -5,5 +5,6 @@
 mkdir build
 cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix` -DCMAKE_BUILD_TYPE=Release -DLIB_INSTALL_DIR=lib -DKDE_INSTALL_USE_QT_SYS_PATHS=ON ..
-make install
+make
+sudo make install
 cd ..
